2011-10-13  Richard Henderson  <rth@redhat.com>

	* config/rs6000/altivec.md (vec_permv16qi): New pattern.

	* config/rs6000/spu.md (vec_permv16qi): New pattern.

	* config/i386/i386.c (ix86_expand_vec_perm_const): New.
	* config/i386/i386-protos.h: Update.
	* config/i386/sse.md (VEC_PERM_CONST): New mode iterator.
	(vec_perm_const<VEC_PERM_CONST>): New expander.

	* optabs.c (expand_vector_broadcast): New.
	(expand_binop): Expand scalar shifts of vectors to vector shifts
	of vectors, if the former isn't supported.
	* tree-vect-generic.c (expand_vector_operations_1): Don't do that
	here; always simplify to scalar shift of vector if possible.

	* config/rs6000/rs6000.c (rs6000_expand_vector_init): Fix mode
	test for vector splat.

2011-10-13  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/sse.md (vec_set<mode>): Change V_128 iterator mode
	to V.

2011-10-13  Jakub Jelinek  <jakub@redhat.com>
	    Richard Guenther  <rguenther@suse.de>

	* tree-ssa.c (maybe_optimize_var): Drop TREE_ADDRESSABLE
	from vector or complex vars even if their DECL_UID is in not_reg_needs
	bitmap.

2011-10-13  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/sse.md (reduc_umin_v8hi): New pattern.
	* config/i386/i386.c (ix86_build_const_vector): Handle
	also V32QI, V16QI, V16HI and V8HI modes.
	(emit_reduc_half): New function.
	(ix86_expand_reduc): Use phminposuw insn for V8HImode UMIN.
	Use emit_reduc_half helper function.

2011-10-13   Lawrence Crowl  <crowl@google.com>
	     Diego Novillo  <dnovillo@google.com>

	* lto-streamer-in.c (input_struct_function_base): Factor out of ...
	(input_function): ... here.
	* lto-streamer-out.c (output_struct_function_base): Factor out of ...
	(output_function): ... here.

2011-10-13  Gabriel Charette  <gchare@google.com>
	    Diego Novillo  <dnovillo@google.com>

	* streamer-hooks.h (struct streamer_hooks): Add hooks
	input_location and output_location.
	* lto-streamer-in.c (lto_input_location): Use
	streamer_hooks.input_location, if set.